--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -1,26 +1,6 @@
 \documentclass[11pt]{report}
-\usepackage[a4paper, tmargin=2.54cm, bmargin=2.54cm, lmargin=3.17cm, rmargin=3.17cm]{geometry}
-\newcommand{\head}[1]{\textnormal{\textbf{#1}}}
-
-\usepackage{titlesec}    % Remove the text 'Chapter' from each chapter.
-\titleformat{\chapter}{\normalfont\huge\bf}{\thechapter}{20pt}{\huge\bf}
-
-\title{Master's thesis Health Informatics \the\year}
-\author{authors}
-\setcounter{tocdepth}{3}
-
-\usepackage{graphicx}
-\usepackage{booktabs}
-\usepackage{natbib}
-\usepackage{xcolor}
-\usepackage[spanish, es-tabla]{babel}
-
-%\usepackage{helvet}
-
-\usepackage{amsthm}
-\newtheorem{definicion}{Definición}
-
-%MORE PACKAGES HERE
+\usepackage{import}
+\usepackage{preamble}
 
 
 \begin{document}
