Secciones previas separadas (#20)
Se han llevado a archivos diferentes la portada, autoría, abstract y abreviaturas

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -15,71 +15,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \thispagestyle{empty}
-\begin{titlepage}
-    \hspace{-1.5cm}
-	\includegraphics[width=40mm]{img/LogoETSIIT.png}
-	\includegraphics[width=40mm]{img/LogoFacultadCiencias.jpeg}
-	\hfill
-	\includegraphics[width=50mm]{img/LogoUGR.png}
-	
-	\noindent\begin{small} \sffamily
-		\begin{minipage}{0.65\textwidth}
-			Doble Grado en Ingeniería Informática y Matemáticas\\
-			Curso 2021/2022\\
-			Trabajo de Fin de Grado\\
-		\end{minipage}
-	\hrule
-	\end{small}
-
-	%Thesis title
-	\vspace{1cm}
-	{\LARGE\noindent \textbf{Fractales y Geometría Fractal} \par}
-	\vspace{0.5cm}
-	%Thesis subtitle
-	{\Large\noindent Fractales, geometría fractal y aplicaciones en la ciencia. Visualización de fractales con Ray-Tracing \par}
-	\vspace{2cm}
-	%Author's name
-	{\LARGE\noindent Autor: Juan Antonio Villegas Recio \par} 
-	
-	\vfill
-		
-	\hrule
-	\vspace{0.3cm}
-	
-	\begin{table}[h!]
-		\begin{footnotesize} \sffamily
-			\begin{tabular}{p{0.21\textwidth}p{0.79\textwidth}}
-				Autor: & Juan Antonio Villegas Recio \\
-				Tutor de Matemáticas:    & Manuel Ruiz Galán, Catedrático de Universidad\\
-				& Departamento de Matemática Aplicada, Universidad de Granada \\
-				Tutor de Informática:      & Carlos Ureña Almagro, Profesor Titular de Universidad \\
-				& Departamento de Lenguajes y Sistemas Informáticos, Universidad de Granada
-			\end{tabular}
-		\end{footnotesize}
-	\end{table}
-	
-\end{titlepage}
+\import{tex/}{titlepage.tex}
 
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter*{Affirmation}
+\chapter*{Autoría}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ABSTRACT
+% AUTORÍA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-I hereby affirm that this Master thesis was composed by myself, that the work contained herein is my own except where explicitly stated otherwise in the text. This work has not been submitted for any other degree or professional qualification except as specified; nor has it been published. \\
-\newline
-City, date
-
-\vspace{0cm}
-\noindent\includegraphics[width=0.3\textwidth]{img/mysignature.png}
-
-\vspace*{-1.1cm}
-\noindent \rule{0.3\textwidth}{.3pt}\\
-\vspace{0.3cm}
-\noindent \large{Student's name}        %%% CHANGE STUDENT'S NAME HERE
+\import{tex/}{autoria.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -88,27 +35,11 @@ City, date
 
 \chapter*{Abstract}
 
-\thispagestyle{empty}
+\import{tex/}{abstract.tex}
 
-\textit{\texttt{(no more than 250-300 words)}}
-
-\subsection*{Background}
-Describe background shortly
-
-\subsection*{Aim}
-Describe the aim of your study
-
-\subsection*{Method}
-Describe your methods
-
-\subsection*{Results}
-Describe the main results of your study
-
-\subsection*{Conclusion}
-State your conclusion
-
-\subsection*{\emph{Keywords:}} No more than six keywords, preferably MeSH terms
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% ÍNDICE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \tableofcontents
 \setcounter{page}{1}
@@ -122,11 +53,7 @@ State your conclusion
 
 \chapter*{Lista de Abreviaturas}
 
-%%%% En orden alfabético
-\begin{itemize}
-\item SDF: Signed Distance Function
-\item SFI: Sistema de Funciones Iteradas
-\end{itemize}
+\import{tex/}{lista-abreviaturas.tex}
 \addcontentsline{toc}{chapter}{Lista de Abreviaturas}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
