--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -62,7 +62,7 @@ Esta figura, creada por el sueco N. F. Helge von Koch sigue un proceso de constr
 \item Aplicamos este proceso indefinidamente, obteniendo en el paso $n$-ésimo $4^n$ segmentos de longitud $\left(\frac 1 3\right)^n$. 
 \end{enumerate}
 
-El resultado final del proceso es lo que llamamos la \textit{curva de Koch}, que denotamos como \textbf{K}
+El resultado final del proceso es lo que llamamos la \textit{curva de Koch}, que denotamos como \textbf{K}.
 
 \begin{figure} [h]
 \centering
@@ -81,4 +81,47 @@ A partir de la curva de Koch podemos crear un objeto matemático muy particular:
 \includegraphics[scale = 0.6]{img/copo-Koch.png}
 \caption{Generación del copo de nieve de Koch}
  \label{fig:copo-Koch}
+\end{figure}
+
+Esta curva posee la particularidad de tener longitud infinita y a su vez encerrar un área finita. Realmente el copo de Koch no es exactamente un fractal, pues no es totalmente autosimilar, aunque se compone de tres partes idénticas las cuales sí son autosimilares.
+
+\subsection{El triángulo de Sierpinski}
+
+Esta figura, original del polaco Waclaw Sierpinski, es creada de una manera que evoca al conjunto de Cantor, pero en dos dimensiones. Veamos detalladamente el proceso (ver imagen \ref{fig:triangulo-Sierpinski}):
+
+\begin{enumerate}
+\item Se parte de un triángulo equilátero de lado 1 (de nuevo la longitud inicial es irrelevante). Uniendo los puntos medios de cada lado obtenemos una partición del triángulo inicial en 4 triángulos equiláteros, del cual extraemos el central. Tenemos por tanto $3=3^1$ triángulos a escala $\frac 1 2 = \left(\frac 1 2\right)^1$ del original.
+
+\item En cada uno de estos tres triángulos equiláteros se repite la operación anterior, obteniendo por tanto $9=3^2$ triángulos, cada uno a escala $\frac 1 4 = \left(\frac 1 2\right)^2$ del original.
+
+\item Repetimos este proceso indefinidamente, de forma que en el paso $n$-ésimo se tienen $3^n$ triángulos, cada uno de ellos a escala $\left(\frac 1 2\right)^n$ del original.
+\end{enumerate}
+
+La figura a la que converge este proceso infinito se conoce como triángulo \textbf{S} de Sierpinski.
+
+\begin{figure} [h]
+\centering
+\includegraphics[scale = 0.6]{img/Sierpinski-triangle.png}
+\caption{Generación del triángulo de Sierpinski}
+ \label{fig:triangulo-Sierpinski}
+\end{figure}
+
+\subsection{La alfombra de Sierpinski y la esponja de Menger}
+
+El propio Sierpinski se dio cuenta que con el mismo patrón utilizado para generar \textbf{S} se pueden generar otras formas. Por ejemplo, pensemos que en lugar de partir de un triángulo equilátero partimos de un cuadrado, lo subdividimos en 9 cuadrados de lado $\frac 1 3$ y extraemos el cuadrado central. Repitiendo este proceso indefinidamente con cada uno de los cuadrados que se generan finalmente se obtiene la llamada alfombra de Sierpinski (ver imagen \ref{fig:alfombra-Sierpinski}).
+
+\begin{figure} [h]
+\centering
+\includegraphics[scale = 0.6]{img/Sierpinski-carpet.png}
+\caption{Generación de la alfombra de Sierpinski}
+ \label{fig:alfombra-Sierpinski}
+\end{figure}
+
+Este proceso también se puede modelar en 3D, obteniendo así la conocida como esponja de Menger o cubo de Magritte, que es una generalización en tres dimensiones de la alfombra de Sierpinski, la cual podemos ver en la imagen \ref{fig:esponja-menger}.
+
+\begin{figure} [h]
+\centering
+\includegraphics[scale = 0.6]{img/esponja_menger.png}
+\caption{Esponja de Menger}
+ \label{fig:esponja-menger}
 \end{figure}
