Añado atajos para conjuntos numéticos (#21)
Se han creado comandos para facilitar la notación de números reales, complejos, naturales...

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -11,6 +11,7 @@
 \setcounter{tocdepth}{3}
 
 \usepackage{graphicx}
+\usepackage{wrapfig}
 \usepackage{booktabs}
 \usepackage{natbib}
 \usepackage{xcolor}
@@ -18,7 +19,12 @@
 
 %\usepackage{helvet}
 
-\usepackage{amsthm}
+\usepackage{amsthm, amssymb}
 \newtheorem{definicion}{Definición}
+\newtheorem{observacion}{Observación}
 
 %MORE PACKAGES HERE
+\newcommand{\R}[0]{\mathbb{R}}
+\newcommand{\C}[0]{\mathbb{C}}
+\newcommand{\N}[0]{\mathbb{N}}
+\newcommand{\Z}[0]{\mathbb{Z}}
