Añadidos ejemplos de dimensión topológica

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -25,6 +25,8 @@
 \theoremstyle{definition}
 \newtheorem{definicion}{Definición}[section]
 \newtheorem{observacion}{Observación}[section]
+\newtheorem{ejemplo}{Ejemplo}[section]
+
 \newcommand{\diam}[0]{\mathrm{diam}}
 
 %MORE PACKAGES HERE
