Fuerzo la no división silábica de las palabras

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -10,6 +10,10 @@
 \author{authors}
 \setcounter{tocdepth}{3}
 
+% PARA EVITAR LA DIVISIÓN SILÁBICA
+\pretolerance=10000
+\tolerance=10000
+
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{booktabs}
