--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -50,7 +50,7 @@ Los puntos del intervalo inicial $[0,1]$ que restan tras las infinitas iteracion
 
 \begin{figure} [h]
 \centering
-\includegraphics[scale = 0.5]{img/cantor.png}
+\includegraphics[scale = 0.4]{img/cantor.png}
 \caption{Iteraciones del proceso de generación del conjunto de Cantor}
  \label{fig:Cantor}
 \end{figure}
@@ -63,7 +63,7 @@ El conjunto de Cantor es además un conjunto compacto, pues cada $C_n$ es una un
 Esta figura, creada por el sueco \textit{N. F. Helge von Koch} sigue un proceso de construcción iterativo al igual que el conjunto de Cantor, pero en lugar de eliminar segmentos, se añaden de la siguiente manera (ver imagen \ref{fig:curva-Koch})
 
 \begin{enumerate}
-\item Partiendo de un segmento de recta de longitud $1$ (la longitud inicial es irrelevante, pues la figura final es la misma salvo un factor de escala), se divide en tres partes iguales de longitud $\frac 1 3$ y la parte central se sustituye por un triángulo equilátero al que se le elimina la base. Esto da lugar a $4=4^1$ segmentos de recta de longitud $\frac 1 3=\left(\frac 1 3\right)^1$.
+\item Partiendo de un segmento de recta de longitud $1$ (al igual que en el conjunto de Cantor, la longitud del segmento inicial es irrelevante, pues la figura final es la misma salvo homotecia), se divide en tres partes iguales de longitud $\frac 1 3$ y la parte central se sustituye por un triángulo equilátero al que se le elimina la base. Esto da lugar a $4=4^1$ segmentos de recta de longitud $\frac 1 3=\left(\frac 1 3\right)^1$.
 
 \item Repetimos este proceso en cada uno de los segmentos de recta obtenidos, colocando el triángulo siempre por encima de la recta, obteniendo así $16=4^2$ segmentos de recta de longitud $\frac 1 9=\left(\frac 1 3\right)^2$.
 
@@ -82,17 +82,24 @@ El resultado final del proceso es lo que llamamos la \textit{curva de Koch}, que
 \subsection{El copo de nieve de Koch}
 \label{subsection:copo-Koch}
 
-A partir de la curva de Koch podemos crear un objeto matemático muy particular: el copo de nieve de Koch. Para crearlo, basta aplicar el proceso iterativo descrito para generar la curva de Koch a cada uno de los segmentos que componen un triángulo equilátero, de forma que los triángulos que se generan apunten hacia el exterior.
+A partir de la curva de Koch podemos generar un objeto matemático muy particular: el copo de nieve de Koch. Para crearlo, basta aplicar el proceso iterativo descrito para generar la curva de Koch a cada uno de los segmentos que componen un triángulo equilátero, de forma que los triángulos que se generan apunten hacia el exterior.
 
 
 \begin{figure} [h]
 \centering
 \includegraphics[scale = 0.6]{img/copo-Koch.png}
 \caption{Generación del copo de nieve de Koch}
- \label{fig:copo-Koch}
+\label{fig:copo-Koch}
 \end{figure}
 
-Esta curva posee la particularidad de tener longitud infinita y a su vez encerrar un área finita. Realmente el copo de Koch no es exactamente un fractal, pues no es totalmente autosimilar, aunque se compone de tres partes idénticas las cuales sí son autosimilares.
+Esta curva posee la particularidad de tener longitud infinita y a su vez encerrar un área finita. Realmente el copo de Koch no es exactamente un fractal, pues no es totalmente autosimilar, aunque se compone de tres partes idénticas las cuales sí son autosimilares, como podemos ver en la imagen \ref{fig:copo-Koch-colores}.
+
+\begin{figure} [h]
+\centering
+\includegraphics[scale = 0.2]{img/copo-Koch-colores.png}
+\caption{Curvas de Koch que componen el copo de Koch}
+\label{fig:copo-Koch-colores}
+\end{figure}
 
 \subsection{El triángulo de Sierpinski}
 \label{subsection:triangulo-Sierpinski} 
