--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -57,6 +57,14 @@ Los puntos del intervalo inicial $[0,1]$ que restan tras las infinitas iteracion
 
 El conjunto de Cantor es además un conjunto compacto, pues cada $C_n$ es una unión finita de intervalos cerrados y acotados, y por tanto compactos. Sabiendo que la intersección numerable de conjuntos compactos es compacta, tenemos pues que $\mathbf{C}$ es un conjunto compacto.
 
+Observemos ahora que en la primera iteración eliminamos $1$ segmento de longitud $\frac 1 3$, en la segunda iteración se eliminan $2$ segmentos de longitud $\left(\frac{1}{3}\right)^2$ y en la $n$-ésima iteración extraemos $2^{n-1}$ segmentos de longitud $\left(\frac{1}{3}\right)^n$. Si sumamos todas las longitudes de todos los segmentos que son eliminados en cada paso se obtiene:
+$$
+\sum_{n=1}^\infty 2^{n-1}\left(\frac 1 3\right)^n  = \frac 1 3  \sum_{n=0}^\infty 2^n\left(\frac 1 3\right)^n =  \frac 1 3  \sum_{n=0}^\infty \left(\frac 2 3\right)^n = \frac{1}{3} \left(\frac{1}{1-\frac{2}{3}}\right) = 1,
+$$
+donde hemos usado que la suma de una serie geométrica de razón $|q|<1$ es $\sum_{n=0}^\infty q^n = \frac{1}{1-q}$.
+
+Esto nos lleva a concluir que la longitud eliminada es igual a la longitud original y aún así tenemos puntos, por ejemplo los extremos de los intervalos que se van generando. Es decir, los puntos de $\mathbf{C}$ no están agrupados, sino que forman una especie de \textit{polvareda}.
+
 \subsection{La curva de Koch}
 \label{subsection:curva-Koch}
 
@@ -127,9 +135,8 @@ Si llamamos $A$ al área del triángulo inicial, sabemos que en la primera itera
 $$
 A \sum_{n=1}^\infty 3^{n-1}\left(\frac 1 4\right)^n  = \frac A 4  \sum_{n=0}^\infty 3^n\left(\frac 1 4\right)^n =  \frac A 4  \sum_{n=0}^\infty \left(\frac 3 4\right)^n = \frac{A}{4} \left(\frac{1}{1-\frac{3}{4}}\right) = A,
 $$
-donde hemos usado que la suma de una serie geométrica de razón $|q|<1$ es $\sum_{n=0}^\infty q^n = \frac{1}{1-q}$.
 
-Es decir, el área eliminada es igual al área total y aún así tenemos puntos (por ejemplo los vértices de los triángulos que se van generando). Es decir, los puntos que forman \textbf{S} no están agrupados formando un área.
+En este caso ocurre algo parecido a lo que vimos que sucedía con el conjunto de Cantor en la sección \ref{subsection:Cantor}. El área eliminada es igual al área total y aún así tenemos puntos (por ejemplo los vértices de los triángulos que se van generando). Es decir, los puntos que forman \textbf{S} no están agrupados formando un área.
 
 \subsection{La alfombra de Sierpinski y la esponja de Menger}
 \label{subsection:alfombra-esponja}
